--- a/docstrings/plotting.yaml
+++ b/docstrings/plotting.yaml
@@ -8,3 +8,4 @@ functions:
   - name: plot_blue_marble_ground_track
   - name: plot_miller_ground_track
   - name: dual_y_axis
+  - name: trajectory_3d
